--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -119,17 +119,17 @@
                         <button type="submit" class="btn btn-primary">Sign in</button>
                       </div>
                       <div class='clear center'>
-                        <a href="/register">Sign up</a>
-                      </div>
-                      <div class='clear center'>
                         <a href="/recoverPassword">Forgot password?</a>
+                      </div>
+                       <div class='clear center'>
+                        <a href="/register">New user? JOIN NOW</a>
                       </div>
                       <div class='clear center'>
                         <h3>OR</h3>
                         Login with your Facebook account
                       </div>
                       <div class='clear center'>
-                        <a href="/auth/facebook" class="btn btn-info">Facebook login</a>
+                        <a href="/auth/facebook" class="btn btn-info">FB login</a>
                       </div>
                       <div class='clear center'>
                         <a href="/register">Sign up</a>
@@ -186,6 +186,7 @@
             <a href="/"><div class='alt-back'>Home</div></a>
             <a href="/about"><div class='alt-back'>About the Site</div></a>
             <a href="http://www.amazon.co.uk/dp/0993415504" target="book"><div class='alt-back'>Buy the Books</div></a>
+              <div>Another Tab</div>
           </div>
           <div class="panel panel-default">              
               <div class="panel-body">
