updated book links to amazon affiliate

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,11 +1,11 @@
 <h1 style="color: red;">About the Website</h1>
 <p>The website is a <b>FREE</b> interactive reader's community and puzzle website. The website allows readers of the <b>Hannover Game</b> and <b>Hannover series</b> of books to join a group depicted in the books, then complete puzzles and challenges to shift the Balance of Power to their team.</p>
 
-<p>To take part in the site, readers need to join the site and own a copy of the Hannover Game novel, either as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book"><b>Print</b></a>.</p>
+<p>To take part in the site, readers need to join the site and own a copy of the Hannover Game novel, either as an <a href="http://amzn.to/1YqTBi3" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://amzn.to/1YqTLpu" target="book" title="Buy the Print book"><b>Print</b></a>.</p>
 
 <h3 style="color: red;">FAQ</h3>
 <p><b>Is the website free?</b><br>
-    Yes, the website is entirely and exclusively free to all Hannover series readers to <a href="/register">join and play</a>. As this site is a free bonus for Hannover series readers, you will need to have purchased your copy of the <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">Hannover Game</a> in order to crack the code and prove you are a member of the Hannover reader community.
+    Yes, the website is entirely and exclusively free to all Hannover series readers to <a href="/register">join and play</a>. As this site is a free bonus for Hannover series readers, you will need to have purchased your copy of the <a href="http://amzn.to/1YqTBi3" target="book" title="Buy the eBook">Hannover Game</a> in order to crack the code and prove you are a member of the Hannover reader community.
 </p>
     
 <p><b>How is the Balance of Power calculated?</b><br>
@@ -16,7 +16,8 @@
 
 <h2 style="color: red;">About the Hannover Game</h2>
 
-<img src="images/Hannover-Game-front-cover-final.png" width="120" height="180" style="border:1px solid grey; box-shadow: 3px 3px 6px grey; margin-right: 15px;" align="left" alt="The Hannover Game" title="The Hannover Game">
+<a href="http://amzn.to/1YqTBi3" target="book">
+    <img src="images/Hannover-Game-front-cover-final.png" width="120" height="180" style="border:1px solid grey; box-shadow: 3px 3px 6px grey; margin-right: 15px;" align="left" alt="The Hannover Game" title="The Hannover Game"></a>
 
     <p>In the Hannover Game, the once retired Byford is again drawn back into service with Hannover, the secretive organisation he left several years earlier. The promise of a reward close to home proving impossible for the ageing operative to refuse. Meanwhile the Anti-Subversion and Terrorism Unit (ASTU) move into action to investigate a bold terrorist attack.</p>
 
