--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Hannover Game</title>
+    <title>The Hannover Series</title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
@@ -184,8 +184,8 @@
         <div class='col-md-8'>
           <div class='tabs'>
             <a href="/"><div class='alt-back'>Home</div></a>
-            <a href="/about"><div class='alt-back'>About the Site</div></a>
-            <a href="http://www.amazon.co.uk/dp/0993415504" target="book"><div class='alt-back'>Buy the Books</div></a>
+            <a href="/about"><div class='alt-back'>About</div></a>
+            <a href="http://amzn.to/1YqTBi3" target="book"><div class='alt-back'>Buy the Books</div></a>
               <div>Another Tab</div>
           </div>
           <div class="panel panel-default">              
@@ -230,7 +230,7 @@
           <div class="panel panel-default margin-top" 
           style='height:400px;width:170px;'>
               <div class="panel-body center" style='padding:0;'>
-                  <a href="http://www.amazon.co.uk/dp/0993415504" target="book">
+                  <a href="http://amzn.to/1YqTBi3" target="book">
                     <% var num = Math.random(); if(num < 0.3333){%>
                     <img src="/images/hannover-right-side-advert-001.png"/>
                     <%} else if( num < 0.6667) {%>
