Updates to various pages

--- a/views/points.ejs
+++ b/views/points.ejs
@@ -1,5 +1,5 @@
 <div>
-	<h1>Challenge points</h1>
+	<h1>Challenge Points</h1>
 	<div class='center'>
 		<h2>You have <%= data.earned %> points from a total of <%= data.total %></h2>
 	</div>
