--- a/views/recoverPassword.ejs
+++ b/views/recoverPassword.ejs
@@ -1,7 +1,7 @@
 <h1>Lost Password</h1>
 <div ng-hide='auth.newPasswordSent'>
 	<p>Please enter the email address used to create your account.</p>
-	<p>New password will be sent to this email.</p>
+	<p>A new password will be sent to this email.</p>
 	<p>
 		<div class='row'>
 			<div class='error ng-hide' ng-hide='auth.model.message'>
@@ -23,4 +23,4 @@
 </div>
 <div ng-show='auth.newPasswordSent'>
 	<h3>A new password was sent to your email.</h3>
-</div>
+</div>A n
