changes to home and about page text

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 <h1 style="color: red;">About the Website</h1>
-<p>The website is a <b>FREE</b> interactive reader's community and puzzle website. The website allows readers of the <b>Hannover Game</b> and <b>Hannover series</b> of books to join a group depicted in the books, then complete puzzles and challenges to shift the Balance of Power to their team.</p>
+<p>In the Hannover series, the world is a battle ground for proving your mental and physical prowess. Whether Hannover, ASTU, SorceSek or Black Dragon; everyone is called on to apply their intelligence and shift the Balance of Power in the world.</p>
 
 <p>To take part in the site, readers need to join the site and own a copy of the Hannover Game novel, either as an <a href="http://amzn.to/1YqTBi3" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://amzn.to/1YqTLpu" target="book" title="Buy the Print book"><b>Print</b></a>.</p>
 
