--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -181,13 +181,16 @@
               </div>
           </div>
         </div>
+          
+<!-- TOP LEVEL PAGE TABS -->
         <div class='col-md-8'>
           <div class='tabs'>
             <a href="/"><div class='alt-back'>Home</div></a>
             <a href="/about"><div class='alt-back'>About</div></a>
-            <a href="http://amzn.to/1YqTBi3" target="book"><div class='alt-back'>Buy the Books</div></a>
-              <div>Another Tab</div>
+            <a href="http://amzn.to/1YqTBi3" target="book"><div class='alt-back'>Buy the Book</div></a>
           </div>
+<!-- end top level page tabs -->
+            
           <div class="panel panel-default">              
               <div class="panel-body">
                   <%- body %>
