adding Hannover Team to About

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -26,9 +26,17 @@
 
 <hr>
 
-<h2 style="color: red;">About the Author</h2>
+<h2 style="color: red;">Meet the Hannover Team</h2>
+<h3>The Author</h3>
     <img src="images/markJDiez-001.jpg" alt="Picture of Mark J Diez" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
     <p>Mark J Diez began writing fiction in 1995, starting with the Tales of Malartu fantasy series of short stories and gamebooks. After several years focusing on fantasy adventure writing for video and board game worlds he migrated to action adventure and the Hannover series.</p>
 
     <p>His debut novel, The Hannover Game, is an innovative break from the usual indie author approaches. Drawing on his experience creating fantasy worlds, Diez has wrapped the novel in a lively online community and website. Readers are able to join one of the Hannover world's teams, complete puzzles, solve challenges and shift the Balance of Power in their favour.</p>
+
+<h3>The Editor</h3>
+    <img src="images/loreleiLogsdon-001.jpg" alt="Picture of Lorelei Logsdon" align="left" style="margin-right:10px; height: 240px; width: 250px;">
+    
+<p>Lorelei has served as editor for close to 300 published books, and has over twenty years of experience as a writer and communications specialist within multiple industries. She have a bachelor's degree in Communication Studies from the University of Maryland, a master's degree in English from East Carolina University, as well as graduate-level certification in teaching English to speakers of other languages (TESOL).</p>
+ 
+<p>She has edited first-time authors, multi-published authors, and NYT, USA Today, and Wall Street Journal best-selling authors.</p>
