--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,7 +16,7 @@
     <meta name="rating" CONTENT="General">
     <meta name="distribution" CONTENT="GLOBAL">
     <meta name="language" CONTENT="en">
-    <meta name="copyright" CONTENT="Copyright 2015 Mark J Diez">    
+    <meta name="copyright" CONTENT="Copyright 2015-2016 Mark J Diez">    
 
     <!-- Include Style Sheets --> 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
@@ -78,7 +78,7 @@
             SourceSek
           <% } %> 
           <% if(teams.best){%>
-          hold the Balance of Power.
+          hold the Balance of Power
           <% } %> 
         </div>
         <% if(!currentUser){ %>
