Updated About page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -34,9 +34,16 @@
 
     <p>His debut novel, The Hannover Game, is an innovative break from the usual indie author approaches. Drawing on his experience creating fantasy worlds, Diez has wrapped the novel in a lively online community and website. Readers are able to join one of the Hannover world's teams, complete puzzles, solve challenges and shift the Balance of Power in their favour.</p>
 
-<h3>The Editor</h3>
+<h3>The Editor<br></h3>
     <img src="images/loreleiLogsdon-001.jpg" alt="Picture of Lorelei Logsdon" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
 <p>Lorelei has served as editor for close to 300 published books, and has over twenty years of experience as a writer and communications specialist within multiple industries. She have a bachelor's degree in Communication Studies from the University of Maryland, a master's degree in English from East Carolina University, as well as graduate-level certification in teaching English to speakers of other languages (TESOL).</p>
  
 <p>She has edited first-time authors, multi-published authors, and NYT, USA Today, and Wall Street Journal best-selling authors.</p>
+
+<p>You can contact Lorelei via her website at <a href="" target="team" title="Visit Lorelei's website">http://www.loreleilogsdon.com/</a></p>
+
+<h3>The Illustrator</h3>
+    <img src="images/404.png" alt="Picture of Dragan Bilic" align="left" style="margin-right:10px; height: 240px; width: 250px;">
+    
+<p>Dragan Bilic... </p>
