--- a/views/about.ejs
+++ b/views/about.ejs
@@ -32,18 +32,23 @@
     
     <p>Mark J Diez began writing fiction in 1995, starting with the Tales of Malartu fantasy series of short stories and gamebooks. After several years focusing on fantasy adventure writing for video and board game worlds he migrated to action adventure and the Hannover series.</p>
 
-    <p>His debut novel, The Hannover Game, is an innovative break from the usual indie author approaches. Drawing on his experience creating fantasy worlds, Diez has wrapped the novel in a lively online community and website. Readers are able to join one of the Hannover world's teams, complete puzzles, solve challenges and shift the Balance of Power in their favour.</p>
+    <p>His debut novel, The Hannover Game, is an innovative break from the usual indie author approaches. Drawing on his experience creating fantasy worlds, Diez has wrapped the novel in a lively online community and website. Readers are able to join one of the Hannover world's teams, complete puzzles, solve challenges and shift the Balance of Power in their favour.</p><br>
 
-<h3>The Editor<br></h3>
+<br><h3>The Editor</h3>
     <img src="images/loreleiLogsdon-001.jpg" alt="Picture of Lorelei Logsdon" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
-<p>Lorelei has served as editor for close to 300 published books, and has over twenty years of experience as a writer and communications specialist within multiple industries. She have a bachelor's degree in Communication Studies from the University of Maryland, a master's degree in English from East Carolina University, as well as graduate-level certification in teaching English to speakers of other languages (TESOL).</p>
+<p><b>Lorelei Logsdon</b> has served as editor for close to 300 published books, and has over twenty years of experience as a writer and communications specialist within multiple industries. She have a bachelor's degree in Communication Studies from the University of Maryland, a master's degree in English from East Carolina University, as well as graduate-level certification in teaching English to speakers of other languages (TESOL).</p>
  
 <p>She has edited first-time authors, multi-published authors, and NYT, USA Today, and Wall Street Journal best-selling authors.</p>
 
 <p>You can contact Lorelei via her website at <a href="" target="team" title="Visit Lorelei's website">http://www.loreleilogsdon.com/</a></p>
 
-<h3>The Illustrator</h3>
-    <img src="images/404.png" alt="Picture of Dragan Bilic" align="left" style="margin-right:10px; height: 240px; width: 250px;">
+<br><h3>The Designer</h3>
+    <img src="images/andreiMarchenko-001.jpg" alt="Picture of Andrei Marchenko" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
-<p>Dragan Bilic... </p>
+<p><b>Andrei Marchenko</b> aaaaa</p>
+
+<br><h3>The Illustrator</h3>
+    <img src="images/draganBilic-001.jpg" alt="Picture of Dragan Bilic" align="left" style="margin-right:10px; height: 240px; width: 250px;">
+    
+<p><b>Dragan Bilic</b> is a multiple 99designs and designcrowd communities award winner. He's a professional designer with his creative talents focused on print, web design and social media branding. So far he has designed over 1500 book covers, web banners, letterheads, postcards, Facebook banners, adds etc.</p>
