--- a/views/about.ejs
+++ b/views/about.ejs
@@ -46,7 +46,11 @@
 <br><h3>The Designer</h3>
     <img src="images/andreiMarchenko-001.jpg" alt="Picture of Andrei Marchenko" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
-<p><b>Andrei Marchenko</b> lorem ipsum  lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.  lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
+<p><b>Andrei Marchenko</b> lorem ipsum  lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
+
+<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
+
+<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
 
 <br><h3>The Illustrator</h3>
     <img src="images/draganBilic-001.jpg" alt="Picture of Dragan Bilic" align="left" style="margin-right:10px; height: 240px; width: 250px;">
