--- a/views/about.ejs
+++ b/views/about.ejs
@@ -44,7 +44,7 @@
 <p>You can contact Lorelei via her website at <a href="" target="team" title="Visit Lorelei's website">http://www.loreleilogsdon.com/</a></p>
 
 <br><h3>The Designer</h3>
-    <img src="images/andreiMarchenko-001.jpg" alt="Picture of Andrei Marchenko" align="left" style="margin-right:10px; height: 240px; width: 250px;">
+    <img src="images/andreiMarchenko-001.jpg" alt="Picture of Andrei Marchenko" align="left" style="margin-right:10px; height: 230px; width: 240px;">
     
 <p><b>Andrei Marchenko</b> lorem ipsum  lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
 
@@ -52,7 +52,9 @@
 
 <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
 
-<br><h3>The Illustrator</h3>
+<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
+
+<br><br><h3>The Illustrator</h3>
     <img src="images/draganBilic-001.jpg" alt="Picture of Dragan Bilic" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
 <p><b>Dragan Bilic</b> is a multiple 99designs and designcrowd communities award winner. He's a professional designer with his creative talents focused on print, web design and social media branding. So far he has designed over 1500 book covers, web banners, letterheads, postcards, Facebook banners, adds etc.</p>
