Update to About

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -46,7 +46,7 @@
 <br><h3>The Designer</h3>
     <img src="images/andreiMarchenko-001.jpg" alt="Picture of Andrei Marchenko" align="left" style="margin-right:10px; height: 230px; width: 240px;">
     
-<p><b>Andrei Marchenko</b> lorem ipsum  lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
+<p><b>Andrei Marchenko</b> is responsible for the technical design, coding and deployment of the website.  </p>
 
 <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
 
