--- a/views/about.ejs
+++ b/views/about.ejs
@@ -57,4 +57,8 @@
 <br><br><h3>The Illustrator</h3>
     <img src="images/draganBilic-001.jpg" alt="Picture of Dragan Bilic" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
-<p><b>Dragan Bilic</b> is a multiple 99designs and designcrowd communities award winner. He's a professional designer with his creative talents focused on print, web design and social media branding. So far he has designed over 1500 book covers, web banners, letterheads, postcards, Facebook banners, adds etc.</p>
+<p><b>Dragan Bilic</b> is a multiple 99designs and designcrowd communities award winner. He's a professional designer with his creative talents focused on print, web design and social media branding.</p>
+    
+<p>So far he has designed over 1500 book covers, web banners, letterheads, postcards, Facebook banners, adds, etc.</p>
+
+<p>You can contact Dragan about your design projects at <a href="https://www.upwork.com/freelancers/~01c663b35d13ff01b2" target="upwork"> online projects page</a>.</p>
