Final draft of About

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -46,13 +46,11 @@
 <br><h3>The Designer</h3>
     <img src="images/andreiMarchenko-001.jpg" alt="Picture of Andrei Marchenko" align="left" style="margin-right:10px; height: 230px; width: 240px;">
     
-<p><b>Andrei Marchenko</b> is responsible for the technical design, coding and deployment of the website.  </p>
+<p><b>Andrei Marchenko</b> is responsible for the technical design, coding and deployment of the website.</p>
 
-<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
+<p>Andrei is a competent .NET Developer whos specialisation is with web applications based on ASP.NET MVC. He also uses JavaScript practically as much as C#. Other technology skills include JQuery, Angular JS and SQL along with CSS and HTML.</p>
 
-<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
-
-<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
+<p>If you have any technology challenges that need design and implementation, you can contact Andrei via his <a href="https://www.upwork.com/freelancers/~0153bdc7c86ddaea1c" target="upwork">online consultancy page</a>.</p>
 
 <br><br><h3>The Illustrator</h3>
     <img src="images/draganBilic-001.jpg" alt="Picture of Dragan Bilic" align="left" style="margin-right:10px; height: 240px; width: 250px;">
@@ -61,4 +59,4 @@
     
 <p>So far he has designed over 1500 book covers, web banners, letterheads, postcards, Facebook banners, adds, etc.</p>
 
-<p>You can contact Dragan about your design projects at <a href="https://www.upwork.com/freelancers/~01c663b35d13ff01b2" target="upwork"> online projects page</a>.</p>
+<p>You can contact Dragan about your design projects at his <a href="https://www.upwork.com/freelancers/~01c663b35d13ff01b2" target="upwork"> online projects page</a>.</p>
