Tweaks to About

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -30,32 +30,32 @@
 <h3>The Author</h3>
     <img src="images/markJDiez-001.jpg" alt="Picture of Mark J Diez" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
-    <p>Mark J Diez began writing fiction in 1995, starting with the Tales of Malartu fantasy series of short stories and gamebooks. After several years focusing on fantasy adventure writing for video and board game worlds he migrated to action adventure and the Hannover series.</p>
+    <p><b style="color: red;">Mark J Diez</b> began writing fiction in 1995, starting with the Tales of Malartu fantasy series of short stories and gamebooks. After several years focusing on fantasy adventure writing for video and board game worlds he migrated to action adventure and the Hannover series.</p>
 
     <p>His debut novel, The Hannover Game, is an innovative break from the usual indie author approaches. Drawing on his experience creating fantasy worlds, Diez has wrapped the novel in a lively online community and website. Readers are able to join one of the Hannover world's teams, complete puzzles, solve challenges and shift the Balance of Power in their favour.</p><br>
 
 <br><h3>The Editor</h3>
     <img src="images/loreleiLogsdon-001.jpg" alt="Picture of Lorelei Logsdon" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
-<p><b>Lorelei Logsdon</b> has served as editor for close to 300 published books, and has over twenty years of experience as a writer and communications specialist within multiple industries. She have a bachelor's degree in Communication Studies from the University of Maryland, a master's degree in English from East Carolina University, as well as graduate-level certification in teaching English to speakers of other languages (TESOL).</p>
+<p><b style="color: red;">Lorelei Logsdon</b> has served as editor for close to 300 published books, and has over twenty years of experience as a writer and communications specialist within multiple industries. She have a bachelor's degree in Communication Studies from the University of Maryland, a master's degree in English from East Carolina University, as well as graduate-level certification in teaching English to speakers of other languages (TESOL).</p>
  
 <p>She has edited first-time authors, multi-published authors, and NYT, USA Today, and Wall Street Journal best-selling authors.</p>
 
 <p>You can contact Lorelei via her website at <a href="" target="team" title="Visit Lorelei's website">http://www.loreleilogsdon.com/</a></p>
 
 <br><h3>The Designer</h3>
-    <img src="images/andreiMarchenko-001.jpg" alt="Picture of Andrei Marchenko" align="left" style="margin-right:10px; height: 230px; width: 240px;">
+    <img src="images/andreiMarchenko-001.jpg" alt="Picture of Andrei Marchenko" align="left" style="margin-right:10px; height: 220px; width: 230px;">
     
-<p><b>Andrei Marchenko</b> is responsible for the technical design, coding and deployment of the website.</p>
+<p><b style="color: red;">Andrei Marchenko</b> is responsible for the technical design, coding and deployment of the website.</p>
 
-<p>Andrei is a competent .NET Developer whos specialisation is with web applications based on ASP.NET MVC. He also uses JavaScript practically as much as C#. Other technology skills include JQuery, Angular JS and SQL along with CSS and HTML.</p>
+<p>Andrei is a competent .NET Developer whose specialisation is with web applications based on ASP.NET MVC. He also uses JavaScript practically as much as C#. Other technology skills include JQuery, Angular JS and SQL along with CSS and HTML.</p>
 
 <p>If you have any technology challenges that need design and implementation, you can contact Andrei via his <a href="https://www.upwork.com/freelancers/~0153bdc7c86ddaea1c" target="upwork">online consultancy page</a>.</p>
 
 <br><br><h3>The Illustrator</h3>
     <img src="images/draganBilic-001.jpg" alt="Picture of Dragan Bilic" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
-<p><b>Dragan Bilic</b> is a multiple 99designs and designcrowd communities award winner. He's a professional designer with his creative talents focused on print, web design and social media branding.</p>
+<p><b style="color: red;">Dragan Bilic</b> is a multiple 99designs and designcrowd communities award winner. He's a professional designer with his creative talents focused on print, web design and social media branding.</p>
     
 <p>So far he has designed over 1500 book covers, web banners, letterheads, postcards, Facebook banners, adds, etc.</p>
 
