Updates to About

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -44,7 +44,7 @@
 <p>You can contact Lorelei via her website at <a href="" target="team" title="Visit Lorelei's website">http://www.loreleilogsdon.com/</a></p>
 
 <br><h3>The Designer</h3>
-    <img src="images/andreiMarchenko-001.jpg" alt="Picture of Andrei Marchenko" align="left" style="margin-right:10px; height: 220px; width: 230px;">
+    <img src="images/andreiMarchenko-001.jpg" alt="Picture of Andrei Marchenko" align="left" style="margin-right:20px; margin-left: 10px; height: 220px; width: 230px;">
     
 <p><b style="color: red;">Andrei Marchenko</b> is responsible for the technical design, coding and deployment of the website.</p>
 
