Reading terms page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -187,7 +187,8 @@
           <div class='tabs'>
             <a href="/"><div class='alt-back'>Home</div></a>
             <a href="/about"><div class='alt-back'>About</div></a>
-            <a href="http://amzn.to/1YqTBi3" target="book"><div class='alt-back'>Buy the Book</div></a>
+            <a href="http://amzn.to/1YqTBi3" target="book"><div class='alt-back'><b>Buy the Book</b></div></a>
+            <a href="/">Test</a>
           </div>
 <!-- end top level page tabs -->
             
