--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -143,7 +143,7 @@
               </div>
               <div class="panel-body">
                   <img style='width: 100%;' ng-src="{{auth.currentUser.profilePicLarge}}"/>
-                  <a href="/profile">Profile </a><a href="/edit"> [edit]</a><br/>
+                  <a href="/profile">View Profile </a><a href="/edit"> [edit]</a><br/>
                   <a href="/auth/logout">Sign Out</a>
               </div>
           </div>
@@ -188,7 +188,6 @@
             <a href="/"><div class='alt-back'>Home</div></a>
             <a href="/about"><div class='alt-back'>About</div></a>
             <a href="http://amzn.to/1YqTBi3" target="book"><div class='alt-back'><b>Buy the Book</b></div></a>
-            <a href="/">Test</a>
           </div>
 <!-- end top level page tabs -->
             
@@ -250,7 +249,6 @@
       <div class='row'>
         <div class="panel panel-default margin-top alt-back">
               <div class="panel-body center">
-                  <p><img src="images/facebook_40.png"></p>
                   <p><a href="/terms">Terms & Conditions</a></p>
               </div>              
           </div>
