--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -1,10 +1,17 @@
 <h1>Terms & Conditions</h1>
 
-<h2>Term 1</h2>
-<p>lorem ipsun dolar coconut septum libre donut lorem ipsun dolar coconut septum libre donut lorem ipsun dolar coconut septum libre donut lorem ipsun dolar coconut septum libre donut </p>
+<ol>
 
-<h2>Term 2</h2>
-<p>lorem ipsun dolar coconut septum libre donut lorem ipsun dolar coconut septum libre donut lorem ipsun dolar coconut septum libre donut lorem ipsun dolar coconut septum libre donut </p>
+    <li>This website and all its contents are Copyright Mark J Diez (the 'Owner'). No part of the website or any of its contents may be reproduced or used in any way except a) with the sole intent of promoting the website, author or works OR 2) with the express written permission of Mark J Diez where the purpose is other than stated in 1)</li>
 
-<h2>Term 3</h2>
-<p>lorem ipsun dolar coconut septum libre donut lorem ipsun dolar coconut septum libre donut lorem ipsun dolar coconut septum libre donut lorem ipsun dolar coconut septum libre donut </p>
+    <li>Registered users are those who submit their details via the website and sign-up for membership to the site. In so doing these members accept the Terms and Conditions of use for the website. If these are not to be accepted the user cannot sign-up for membership of the website.</li>
+
+    <li>Only users who have bought a copy of the Hannover Game are permitted to become members of the website.</li>
+    
+    <li>The website and it's contents are free to members and no charges are made for its use.</li>
+    
+    <li>Each of the Challenges and the Balance of Power points system is meant for entertainment purposes only. There are no prizes or rewards for completing challenges or for a given ranking. However, the Owner may from time to time choose to assign a reward on an ad-hoc basis.</li>
+    
+</ol>
+
+<p>Mark J Diez</p>
