Fixes for points and others

--- a/views/rankings.ejs
+++ b/views/rankings.ejs
@@ -14,7 +14,7 @@
 			<tr>
 				<td><%= i + 1 %></td>
 				<td><a href="/profile/<%= users[i].id %>"><img class='pic-small' 
-					src="<%= users[i].profilePicSmall %>" /> 
+					src="<%= users[i].profilePicLarge %>" /> 
 					<%= users[i].name %>
 					</a>
 				</td>
